<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calftracker.project.activities.EditVaccineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/vertical55percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical45percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical35percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/edit_vaccine_textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/edit_vaccine_vaccine_name"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp"
                android:gravity="end" />

            <EditText
                android:id="@+id/edit_vaccine_editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/edit_vaccine_enter_vaccine"
                android:inputType="text"
                android:textSize="20sp"
                android:nextFocusDown="@+id/edit_vaccine_editTextAdminStart"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewName"
                app:layout_constraintVertical_bias="0.526"
                android:layout_marginRight="16dp"
                android:gravity="start" />

            <TextView
                android:id="@+id/edit_vaccine_textViewRange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="Vaccine Range"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewAdminMethod" />

            <TextView
                android:id="@+id/edit_vaccine_textViewAdminStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/edit_vaccine_administration_start"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical35percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewRange"
                android:layout_marginLeft="16dp"
                android:gravity="end" />

            <EditText
                android:id="@+id/edit_vaccine_editTextAdminStart"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_vaccine_administration_hint_start"
                android:inputType="number"
                android:nextFocusDown="@+id/edit_vaccine_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewAdminStart"
                app:layout_constraintStart_toEndOf="@+id/edit_vaccine_textViewAdminStart"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewAdminStart"
                app:layout_constraintVertical_bias="0.296"
                android:layout_marginLeft="16dp" />

            <Spinner
                android:id="@+id/edit_vaccine_spinner"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/vacc_range_spinner"
                android:nextFocusDown="@+id/edit_vaccine_editTextAdminEnd"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_editTextAdminStart"
                app:layout_constraintStart_toEndOf="@+id/edit_vaccine_editTextAdminStart"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_editTextAdminStart" />

            <TextView
                android:id="@+id/edit_vaccine_textViewAdminEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/edit_vaccine_administration_end"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical35percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewAdminStart" />

            <EditText
                android:id="@+id/edit_vaccine_editTextAdminEnd"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_vaccine_administration_hint_end"
                android:inputType="number"
                android:nextFocusDown="@+id/edit_vaccine_spinner1"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewAdminEnd"
                app:layout_constraintStart_toEndOf="@+id/edit_vaccine_textViewAdminEnd"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewAdminEnd"
                app:layout_constraintVertical_bias="0.148" />


            <Spinner
                android:id="@+id/edit_vaccine_spinner1"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/vacc_range_spinner"
                android:nextFocusDown="@+id/edit_vaccine_editTextDosage"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_editTextAdminEnd"
                app:layout_constraintStart_toEndOf="@+id/edit_vaccine_editTextAdminEnd"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_editTextAdminEnd" />

            <TextView
                android:id="@+id/edit_vaccine_textViewDosage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/edit_vaccine_vaccine_dosage"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewName" />

            <EditText
                android:id="@+id/edit_vaccine_editTextDosage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_vaccine_enter_vaccine_dosage"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/edit_vaccine_editTextDosageUnits"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewDosage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewDosage"
                app:layout_constraintVertical_bias="0.241" />

            <TextView
                android:id="@+id/edit_vaccine_textViewDosageUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:text="@string/edit_vaccine_dosage_units"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewDosage" />

            <EditText
                android:id="@+id/edit_vaccine_editTextDosageUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_vaccine_enter_units"
                android:inputType="text"
                android:nextFocusDown="@+id/edit_vaccine_editTextAdminMethod"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewDosageUnits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewDosageUnits" />

            <TextView
                android:id="@+id/edit_vaccine_textViewAdminMethod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/edit_vaccine_admin_method"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewDosageUnits" />

            <EditText
                android:id="@+id/edit_vaccine_editTextAdminMethod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_vaccine_enter_admin_method"
                android:inputType="text"
                android:nextFocusDown="@+id/edit_vaccine_buttonAddVaccine"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_textViewAdminMethod"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_textViewAdminMethod"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/edit_vaccine_buttonAddVaccine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/edit_vaccine_buttonCancel"
                android:onClick="clickAddVaccineButton"
                android:text="ADD"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintBottom_toBottomOf="@+id/edit_vaccine_buttonCancel"
                app:layout_constraintTop_toTopOf="@+id/edit_vaccine_buttonCancel" />

            <Button
                android:id="@+id/edit_vaccine_buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="50dp"
                android:onClick="clickCancelVaccineButton"
                android:text="@string/edit_vaccine_cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/edit_vaccine_textViewAdminEnd" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
